# MultiAlphasProject

./: CMakeLists.txt  Function.cpp  Function.h  LRPred.cpp  LRPred.h  Stack.cpp  Stack.h  buffer.c  buffer.h  data2.csv  main.cpp  names.txt  types.h
